# life_game

./: .gitignore  LICENSE  README.md  app.py  commands.py  custom_commands.py  extensions.py  kill.sh  models.py  project_requirement.md  pyproject.toml  startup.sh
routes/: control.py  game.py  statistics.py  template.py  tutorial.py
static/js/: control.js  game.js  statistics.js  template.js  tutorial.js
templates/: base.html
templates/game/: board.html  control.html
templates/statistics/: dashboard.html
templates/template/: library.html
templates/tutorial/: index.html
