[tool.poetry]
name = "life-game"
version = "0.1.0"
description = "A modern implementation of Conway's Game of Life"
authors = ["golbry <golbry@qq.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
blinker = "^1.9.0"
flask-sqlalchemy = "^3.1.0"
flask-cors = "^3.0.0"
itsdangerous = "^2.1.2"
werkzeug = "^3.1.0"
flask-login = "^0.6.0"
flask-migrate = "^4.0.0"
pymysql = "^1.1.1"
pytest = "^8.3.3"
openai = "^1.59.3"
sqlalchemy = "^2.0.28"
click = "^8.1.7"
markupsafe = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
